# COLA-PY

./: CMakeLists.txt  README.md  pyproject.toml
lib/: CMakeLists.txt  main.cpp
lib/pylib/: __init__.py
src/colapy/: __init__.pyi
src/colapy/_cli_lib/: setup.py  sources_templates.py
test/: main.cpp  notebook.ipynb
test/pylib/: __init__.py
